# lottery

./: CMakeLists.txt  LICENSE
app/list-generator/: Generator  main.cpp  readme.md
app/lottery/: Loteria  list.lottery  main.cpp  readme.md
precompiled/: CMakeCache.txt  Makefile  cmake_install.cmake
precompiled/list-generator/: Generator  example.txt
precompiled/lottery/: Lottery
